--- a/bootstrap/src/main/resources/application.properties
+++ b/bootstrap/src/main/resources/application.properties
@@ -3,11 +3,12 @@ spring.application.name=walkin-boot
 spring.config.import=application-basic.properties
 spring.datasource.url=jdbc:postgresql://localhost:15432/walkin
 spring.jta.enabled=false
-spring.datasource.username=
-spring.datasource.password=
+spring.datasource.username=walkin
+spring.datasource.password=walkin
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=create
-sa-token.jwt-secret-key=
+
+sa-token.jwt-secret-key=asdfijmvcoasidjf
 
 spring.sql.init.mode=NEVER
 walkin.system.screen.base-path=/Users/walkin/SourceCode/walkin-projects/walkin-spring-mono/schema
